# databricks-AI-Functions

./: .gitignore  README.md
.claude/: settings.json
.claude/skills/: add-dab-workflow.md
ai-functions-v1-evaluation/: ai_functions_eval_mlflow3.ipynb
ai-functions-v1-examples/: README.md  feature_engineering.md
ai-functions-v2-pipelines/: README.md  pipeline.py  pipeline_sql.sql  pipeline_streaming.py  pipeline_streaming_sql.sql
ai_function_examples/: README.md  insurance_call_center.md
dab-workflows/: README.md  pyproject.toml
dab-workflows/ie-selected-pages/: databricks.yml  run_workflow.sh
dab-workflows/ie-selected-pages/resources/: ie_selected_pages_workflow.job.yml
dab-workflows/ie-selected-pages/src/transformations/: 00_clean_pipeline_tables.py  01_parse_documents.py  02_extract_page_content.py  03_classify_pages.py  04_extract_info_from_classified_pages.py  config.yaml  test_streaming_agg.py
dab-workflows/parse-translate-classify/: README.md
dab-workflows/src/: __init__.py  notebook_helpers.py
dab-workflows/tests/: __init__.py  conftest.py  test_notebook_helpers.py
dab-workflows/unstructured-ie/: README.md  databricks.yml
dab-workflows/unstructured-ie/resources/: ai_parse_document_workflow.job.yml
dab-workflows/unstructured-ie/src/transformations/: 00-clean-pipeline-tables.py  03_extract_key_info.py  config.yaml
